@@ -1,3 +1,7 @@
+2002-04-21  wakaba <w@suika.fam.cx>
+
+	* Entity.pm (pod:C<format>): New section.
+
 2002-04-05  wakaba <w@suika.fam.cx>
 
 	* Util.pm: Add some functions from Message::Field::Structured.
